track and update back to original thermostat mode when changing temperature

--- a/scripts/set_temperature.yaml
+++ b/scripts/set_temperature.yaml
@@ -3,6 +3,8 @@ description: Set the house target temperatures using either `input_select.home_m
   using the `mode` parameter or arbitrary high/low values using the `low` and `high`
   parameters
 mode: restart
+variables:
+  old_hvac_mode: '{{ states("climate.thermostat") }}'
 fields:
   mode:
     description: Used to determine which `input_number` target temperatures to use
@@ -33,6 +35,18 @@ sequence:
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == states("input_number."
           + mode|lower + "_high")|int and state_attr("climate.thermostat", "target_temp_low")|int
           == states("input_number." + mode|lower + "_low")|int }}'
+    - choose:
+      - conditions: '{{ states("climate.thermostat") != old_hvac_mode }}'
+        sequence:
+        - repeat:
+            sequence:
+            - alias: Change thermostat mode
+              service: climate.set_hvac_mode
+              data:
+                entity_id: climate.thermostat
+                hvac_mode: '{{ old_hvac_mode }}'
+            - delay: 2
+            until: '{{ states("climate.thermostat") == {{ old_hvac_mode }} }}'
   - conditions: '{{ low is defined and high is defined }}'
     sequence:
     - repeat:
@@ -47,6 +61,18 @@ sequence:
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == high|int
           and state_attr("climate.thermostat", "target_temp_low")|int == low|int }}'
+    - choose:
+      - conditions: '{{ states("climate.thermostat") != old_hvac_mode }}'
+        sequence:
+        - repeat:
+            sequence:
+            - alias: Change thermostat mode
+              service: climate.set_hvac_mode
+              data:
+                entity_id: climate.thermostat
+                hvac_mode: '{{ old_hvac_mode }}'
+            - delay: 2
+            until: '{{ states("climate.thermostat") == {{ old_hvac_mode }} }}'
   - conditions: '{{ low is defined and high is not defined }}'
     sequence:
     - repeat:
@@ -60,6 +86,18 @@ sequence:
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_low")|int == low|int
           }}'
+    - choose:
+      - conditions: '{{ states("climate.thermostat") != old_hvac_mode }}'
+        sequence:
+        - repeat:
+            sequence:
+            - alias: Change thermostat mode
+              service: climate.set_hvac_mode
+              data:
+                entity_id: climate.thermostat
+                hvac_mode: '{{ old_hvac_mode }}'
+            - delay: 2
+            until: '{{ states("climate.thermostat") == {{ old_hvac_mode }} }}'
   - conditions: '{{ low is not defined and high is defined }}'
     sequence:
     - repeat:
@@ -73,3 +111,15 @@ sequence:
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == high|int
           }}'
+    - choose:
+      - conditions: '{{ states("climate.thermostat") != old_hvac_mode }}'
+        sequence:
+        - repeat:
+            sequence:
+            - alias: Change thermostat mode
+              service: climate.set_hvac_mode
+              data:
+                entity_id: climate.thermostat
+                hvac_mode: '{{ old_hvac_mode }}'
+            - delay: 2
+            until: '{{ states("climate.thermostat") == {{ old_hvac_mode }} }}'
