move resetting hvac mode to script action

--- a/scripts/set_temperature.yaml
+++ b/scripts/set_temperature.yaml
@@ -35,18 +35,10 @@ sequence:
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == states("input_number."
           + mode|lower + "_high")|int and state_attr("climate.thermostat", "target_temp_low")|int
           == states("input_number." + mode|lower + "_low")|int }}'
-    - choose:
-      - conditions: '{{ states("climate.thermostat") != old_hvac_mode }}'
-        sequence:
-        - repeat:
-            sequence:
-            - alias: Change thermostat mode
-              service: climate.set_hvac_mode
-              data:
-                entity_id: climate.thermostat
-                hvac_mode: '{{ old_hvac_mode }}'
-            - delay: 2
-            until: '{{ states("climate.thermostat") == {{ old_hvac_mode }} }}'
+    - alias: Change HVAC mode
+      service: script.set_hvac_mode
+      data:
+        hvac_mode: '{{ old_hvac_mode }}'
   - conditions: '{{ low is defined and high is defined }}'
     sequence:
     - repeat:
@@ -61,18 +53,10 @@ sequence:
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == high|int
           and state_attr("climate.thermostat", "target_temp_low")|int == low|int }}'
-    - choose:
-      - conditions: '{{ states("climate.thermostat") != old_hvac_mode }}'
-        sequence:
-        - repeat:
-            sequence:
-            - alias: Change thermostat mode
-              service: climate.set_hvac_mode
-              data:
-                entity_id: climate.thermostat
-                hvac_mode: '{{ old_hvac_mode }}'
-            - delay: 2
-            until: '{{ states("climate.thermostat") == {{ old_hvac_mode }} }}'
+    - alias: Change HVAC mode
+      service: script.set_hvac_mode
+      data:
+        hvac_mode: '{{ old_hvac_mode }}'
   - conditions: '{{ low is defined and high is not defined }}'
     sequence:
     - repeat:
@@ -86,18 +70,10 @@ sequence:
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_low")|int == low|int
           }}'
-    - choose:
-      - conditions: '{{ states("climate.thermostat") != old_hvac_mode }}'
-        sequence:
-        - repeat:
-            sequence:
-            - alias: Change thermostat mode
-              service: climate.set_hvac_mode
-              data:
-                entity_id: climate.thermostat
-                hvac_mode: '{{ old_hvac_mode }}'
-            - delay: 2
-            until: '{{ states("climate.thermostat") == {{ old_hvac_mode }} }}'
+    - alias: Change HVAC mode
+      service: script.set_hvac_mode
+      data:
+        hvac_mode: '{{ old_hvac_mode }}'
   - conditions: '{{ low is not defined and high is defined }}'
     sequence:
     - repeat:
@@ -111,15 +87,7 @@ sequence:
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == high|int
           }}'
-    - choose:
-      - conditions: '{{ states("climate.thermostat") != old_hvac_mode }}'
-        sequence:
-        - repeat:
-            sequence:
-            - alias: Change thermostat mode
-              service: climate.set_hvac_mode
-              data:
-                entity_id: climate.thermostat
-                hvac_mode: '{{ old_hvac_mode }}'
-            - delay: 2
-            until: '{{ states("climate.thermostat") == {{ old_hvac_mode }} }}'
+    - alias: Change HVAC mode
+      service: script.set_hvac_mode
+      data:
+        hvac_mode: '{{ old_hvac_mode }}'
