--- a/scripts/set_temperature.yaml
+++ b/scripts/set_temperature.yaml
@@ -35,6 +35,10 @@ sequence:
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == states("input_number."
           + mode|lower + "_high")|int and state_attr("climate.thermostat", "target_temp_low")|int
           == states("input_number." + mode|lower + "_low")|int }}'
+    - alias: Change HVAC mode
+      service: script.set_hvac_mode
+      data:
+        hvac_mode: '{{ old_hvac_mode }}'
   - conditions: '{{ low is defined and high is defined }}'
     sequence:
     - repeat:
@@ -49,6 +53,10 @@ sequence:
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == high|int
           and state_attr("climate.thermostat", "target_temp_low")|int == low|int }}'
+    - alias: Change HVAC mode
+      service: script.set_hvac_mode
+      data:
+        hvac_mode: '{{ old_hvac_mode }}'
   - conditions: '{{ low is defined and high is not defined }}'
     sequence:
     - repeat:
@@ -62,6 +70,10 @@ sequence:
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_low")|int == low|int
           }}'
+    - alias: Change HVAC mode
+      service: script.set_hvac_mode
+      data:
+        hvac_mode: '{{ old_hvac_mode }}'
   - conditions: '{{ low is not defined and high is defined }}'
     sequence:
     - repeat:
@@ -75,3 +87,7 @@ sequence:
         - delay: 2
         until: '{{ state_attr("climate.thermostat", "target_temp_high")|int == high|int
           }}'
+    - alias: Change HVAC mode
+      service: script.set_hvac_mode
+      data:
+        hvac_mode: '{{ old_hvac_mode }}'
