add media directories

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -19,6 +19,11 @@ homeassistant:
   customize: !include 'customize.yaml'
   auth_providers:
   - type: homeassistant
+  media_dirs:
+    downloads: /Downloads
+    music: /Music
+    pictures: /Pictures
+    videos: /Videos
 http: !include 'http.yaml'
 discovery: !include 'discovery.yaml'
 ssdp:
