--- a/configuration.yaml
+++ b/configuration.yaml
@@ -15,7 +15,8 @@ homeassistant:
   elevation: !secret 'elevation_home'
   unit_system: imperial
   time_zone: America/New_York
-  external_url: !secret 'url_base'
+  external_url: !secret 'external_url'
+  internal_url: !secret 'internal_url'
   customize: !include 'customize.yaml'
   auth_providers:
   - type: homeassistant
