--- a/automations/notify/hacs_update_available.yaml
+++ b/automations/notify/hacs_update_available.yaml
@@ -8,11 +8,8 @@ action:
 - service: persistent_notification.create
   data:
     title: '{{ states("sensor.hacs") }} updates pending in HACS'
-    message: 'There are {{ states("sensor.hacs") }} updates pending in [HACS](/hacs)
-
-
-      {% for repo in states.sensor.hacs.attributes["repositories"] %}- {{ repo }}
-
-
-      {% endfor %}'
+    message: "There are {{ states(\"sensor.hacs\") }} updates pending in [HACS](/hacs)\n\
+      \n{% for repo in states.sensor.hacs.attributes[\"repositories\"] %}- {{ repo[\"\
+      display_name\"] }} ([Repo](https://github.com/{{ repo[\"name\"] }})): {{ repo[\"\
+      installed_version\"] }} -> {{ repo[\"available_version\"] }} \n\n{% endfor %}"
     notification_id: hacs_update
