add pyscript climate services and move automations to use pyscript services instead of scripts

--- a/automations/home_modes/home.yaml
+++ b/automations/home_modes/home.yaml
@@ -5,6 +5,6 @@ trigger:
   entity_id: input_select.home_mode
   to: Home
 action:
-- service: script.set_temperature
+- service: pyscript.set_temperature
   data:
     mode: home
