--- a/automations/home_modes/night.yaml
+++ b/automations/home_modes/night.yaml
@@ -6,6 +6,6 @@ trigger:
   to: Night
 action:
 - service: script.lock_down
-- service: script.set_temperature
+- service: pyscript.set_temperature
   data:
     mode: night
