--- a/automations/home_modes/away.yaml
+++ b/automations/home_modes/away.yaml
@@ -6,6 +6,6 @@ trigger:
   to: Away
 action:
 - service: script.lock_down
-- service: script.set_temperature
+- service: pyscript.set_temperature
   data:
     mode: away
