add lock manager package

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -25,6 +25,7 @@ homeassistant:
     music: /Music
     pictures: /Pictures
     videos: /Videos
+  packages: !include_dir_named 'packages'
 http: !include 'http.yaml'
 discovery: !include 'discovery.yaml'
 ssdp:
