add folder watcher

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -69,3 +69,4 @@ google_assistant: !include 'google_assistant.yaml'
 pyscript: !include 'pyscript.yaml'
 spotcast: !include 'spotcast.yaml'
 xbox: !include 'xbox.yaml'
+folder_watcher: !include 'folder_watcher.yaml'
