--- a/configuration.yaml
+++ b/configuration.yaml
@@ -18,6 +18,8 @@ homeassistant:
   external_url: !secret 'external_url'
   internal_url: !secret 'internal_url'
   customize: !include 'customize.yaml'
+  allowlist_external_dirs:
+  - /config/pyscript
   auth_providers:
   - type: homeassistant
   media_dirs:
