switch latest version sensor to hassio odroid-n2

--- a/sensor.yaml
+++ b/sensor.yaml
@@ -43,7 +43,8 @@
   source: local
 - platform: version
   name: available_ha_version
-  source: docker
+  source: hassio
+  image: odroid-n2
 - platform: shodan
   name: shodan
   api_key: !secret 'api_shodan'
