--- a/rest_command.yaml
+++ b/rest_command.yaml
@@ -6,3 +6,13 @@ kodi_send:
   method: POST
   payload: '{"kodiid":"{{ kodiid }}","token":"{{ token }}"}'
   content_type: application/json
+assistant_broadcast:
+  url: !secret 'url_assistant_relay'
+  method: POST
+  content_type: application/json
+  payload: '{"command":"{{ command }}", "user":"raman", "broadcast":true}'
+caavo:
+  url: !secret 'url_assistant_relay'
+  method: POST
+  content_type: application/json
+  payload: '{"command":"tell caavo to {{ command }}", "user":"raman"}'
