--- a/media_player.yaml
+++ b/media_player.yaml
@@ -50,5 +50,5 @@
   attributes:
     state: media_player.living_room_tv
     source_list: input_select.living_room_sources|options
-    volume_level: media_player.living_room_tv|volume_level
-    is_volume_muted: media_player.living_room_tv|is_volume_muted
+    volume_level: media_player.living_room_soundbar|volume_level
+    is_volume_muted: media_player.living_room_soundbar|is_volume_muted
