--- a/configuration.yaml
+++ b/configuration.yaml
@@ -66,3 +66,4 @@ pyscript: !include 'pyscript.yaml'
 spotcast: !include 'spotcast.yaml'
 xbox: !include 'xbox.yaml'
 folder_watcher: !include 'folder_watcher.yaml'
+tuya: !include 'tuya.yaml'
