move turn off blanket automation out of pyscript and into native automation

--- a/automations/pyscript/raman_on_zoom.yaml
+++ b/automations/pyscript/raman_on_zoom.yaml
@@ -13,7 +13,8 @@ action:
 - service: pyscript.set_slack_status
   data:
     token: !secret 'token_slack'
-    status_text: On a Call
+    status_text: '{{ trigger.to_state.attributes[''status''] | replace(''_'', '' '')
+      }}'
     status_emoji: ':x:'
 - service: input_boolean.turn_on
   entity_id: input_boolean.zoom_dnd_raman
