--- a/automations/misc/turn_off_blanket_on_ha_start.yaml
+++ b/automations/misc/turn_off_blanket_on_ha_start.yaml
@@ -1,8 +1,8 @@
 id: misc_turn_off_blanket_on_ha_start
 alias: 'Misc: Turn Off Blanket on HA Start'
 trigger:
-  platform: event
-  event_type: homeassistant_started
+  platform: homeassistant
+  event: start
 condition:
   condition: state
   entity_id: switch.sherene_electric_blanket_plug
