--- a/configuration.yaml
+++ b/configuration.yaml
@@ -8,21 +8,8 @@ system_log:
 system_health:
 recorder: !include 'recorder.yaml'
 influxdb: !include 'influxdb.yaml'
-homeassistant:
-  name: Home
-  latitude: !secret 'lat_home'
-  longitude: !secret 'long_home'
-  elevation: !secret 'elevation_home'
-  unit_system: imperial
-  time_zone: America/New_York
-  external_url: !secret 'external_url'
-  internal_url: !secret 'internal_url'
-  customize: !include 'customize.yaml'
-  allowlist_external_dirs:
-  - /config/pyscript
-  auth_providers:
-  - type: homeassistant
-  packages: !include_dir_named 'packages'
+logger: !include 'logger.yaml'
+homeassistant: !include 'homeassistant.yaml'
 http: !include 'http.yaml'
 discovery: !include 'discovery.yaml'
 ssdp:
