use better slack status icons

--- a/automations/pyscript/raman_on_zoom.yaml
+++ b/automations/pyscript/raman_on_zoom.yaml
@@ -15,6 +15,9 @@ action:
     token: !secret 'token_slack'
     status_text: '{{ trigger.to_state.attributes[''status''] | replace(''_'', '' '')
       }}'
-    status_emoji: ':x:'
+    status_emoji: '{% set status = trigger.to_state.attributes[''status''] %}{% if
+      status == ''In_Meeting'' %}:video_camera:{% elif status == ''On_Phone_Call''
+      %}:phone:{% elif status == ''In_Calendar_Event'' %}:calendar:{% elif status
+      == ''Presenting'' %}:bar_chart:{% else %}:no_entry:{% endif %}'
 - service: input_boolean.turn_on
   entity_id: input_boolean.zoom_dnd_raman
