stop tracking UI controlled files

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ tts/
 www/
 *.db
 
+# UI controlled files
+automations.yaml
+scripts.yaml
+
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 ip_bans.yaml
 secrets.yaml
