--- a/configuration.yaml
+++ b/configuration.yaml
@@ -21,6 +21,7 @@ lovelace:
 frontend: !include 'frontend.yaml'
 sensor: !include 'sensor.yaml'
 media_player: !include 'media_player.yaml'
+switch: !include 'switch.yaml'
 vizio: !include 'vizio.yaml'
 pi_hole: !include 'pihole.yaml'
 device_tracker: !include 'device_tracker.yaml'
@@ -53,3 +54,4 @@ pyscript: !include 'pyscript.yaml'
 spotcast: !include 'spotcast.yaml'
 xbox: !include 'xbox.yaml'
 folder_watcher: !include 'folder_watcher.yaml'
+wake_on_lan:
