--- a/configuration.yaml
+++ b/configuration.yaml
@@ -50,3 +50,4 @@ spotcast: !include 'spotcast.yaml'
 xbox: !include 'xbox.yaml'
 folder_watcher: !include 'folder_watcher.yaml'
 wake_on_lan:
+eight_sleep: !include 'eight_sleep.yaml'
