--- a/mqtt.yaml
+++ b/mqtt.yaml
@@ -1,5 +1,5 @@
 birth_message:
-  topic: homeassisatnt/status
+  topic: homeassistant/status
   payload: online
 will_message:
   topic: homeassistant/status
