--- a/homeassistant.yaml
+++ b/homeassistant.yaml
@@ -3,6 +3,7 @@ latitude: !secret 'lat_home'
 longitude: !secret 'long_home'
 elevation: !secret 'elevation_home'
 unit_system: imperial
+currency: USD
 time_zone: America/New_York
 external_url: !secret 'external_url'
 internal_url: !secret 'internal_url'
