changes to support docker move

--- a/sensor.yaml
+++ b/sensor.yaml
@@ -1,8 +1,8 @@
 - platform: radarr_upcoming_media
-  host: !secret 'host_nas'
+  host: !secret 'host_docker'
   api_key: !secret 'api_radarr'
 - platform: sonarr_upcoming_media
-  host: !secret 'host_nas'
+  host: !secret 'host_docker'
   api_key: !secret 'api_sonarr'
 - platform: personalcapital
   email: !secret 'email_raman'
