--- a/configuration.yaml
+++ b/configuration.yaml
@@ -28,6 +28,7 @@ media_player: !include 'media_player.yaml'
 mobile_app:
 mqtt: !include 'mqtt.yaml'
 notify: !include 'notify.yaml'
+plant: !include 'plant.yaml'
 pyscript: !include 'pyscript.yaml'
 python_script:
 recorder: !include 'recorder.yaml'
