--- a/plant.yaml
+++ b/plant.yaml
@@ -1,8 +1,8 @@
-curry:
+Curry:
   sensors:
     moisture: sensor.curry_plant_moisture
   min_moisture: 20
-jasmine:
+Jasmine:
   sensors:
     moisture: sensor.jasmine_plant_moisture
   min_moisture: 20
