add proxmox and prep for 2022.12

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -30,6 +30,7 @@ mobile_app:
 mqtt: !include 'mqtt.yaml'
 notify: !include 'notify.yaml'
 plant: !include 'plant.yaml'
+proxmoxve: !include 'proxmoxve.yaml'
 pyscript: !include 'pyscript.yaml'
 python_script:
 recorder: !include 'recorder.yaml'
