--- a/automations/lights/turn_off_outdoor_lights.yaml
+++ b/automations/lights/turn_off_outdoor_lights.yaml
@@ -7,9 +7,9 @@ trigger:
   event: start
 condition:
   condition: state
-  entity_id: light.all_outdoor
+  entity_id: light.front_porch_light
   state: 'on'
 action:
   service: light.turn_off
   target:
-    entity_id: light.all_outdoor
+    entity_id: light.front_porch_light
