improve automation readability and reduce time to lock door or notify on unlocked door

--- a/automations/notify/someone_leaves_and_door_is_unlocked.yaml
+++ b/automations/notify/someone_leaves_and_door_is_unlocked.yaml
@@ -2,12 +2,13 @@ id: notify_someone_leaves_and_door_is_unlocked
 alias: 'Notify: Someone leaves and door is unlocked'
 trigger:
   platform: state
-  entity_id: person.raman, person.sherene
+  entity_id:
+  - person.raman
+  - person.sherene
   to: not_home
-  for: 00:15:00
+  for: 00:05:00
 condition:
-  condition: and
-  conditions:
+  and:
   - condition: state
     entity_id: input_select.home_mode
     state:
@@ -16,6 +17,12 @@ condition:
   - condition: state
     entity_id: lock.front_door
     state: unlocked
+  - not:
+    - condition: state
+      entity_id:
+      - person.raman
+      - person.sherene
+      state: not_home
 action:
 - alias: Set variables
   variables:
