--- a/automations/routines/someone_comes_back.yaml
+++ b/automations/routines/someone_comes_back.yaml
@@ -2,7 +2,9 @@ id: routine_someone_comes_back
 alias: 'Routine: Someone Comes Back'
 trigger:
   platform: state
-  entity_id: person.raman, person.sherene
+  entity_id:
+  - person.raman
+  - person.sherene
   to: home
 condition:
   condition: state
