--- a/automations/home_modes/home.yaml
+++ b/automations/home_modes/home.yaml
@@ -5,6 +5,7 @@ trigger:
   entity_id: input_select.home_mode
   to: Home
 action:
-- service: pyscript.set_temperature
+- alias: Set temperature mode to home
+  service: pyscript.set_temperature
   data:
     mode: home
