--- a/automations/mobile/lock_door.yaml
+++ b/automations/mobile/lock_door.yaml
@@ -6,6 +6,7 @@ trigger:
   event_data:
     action: lock-door
 action:
+  alias: Lock the door specified in the notification
   service: lock.lock
   target:
     entity_id: '{{ trigger.event.data.action_data.entity_id }}'
