--- a/automations/routines/enable_night_routine.yaml
+++ b/automations/routines/enable_night_routine.yaml
@@ -4,6 +4,7 @@ trigger:
   platform: time
   at: 00:00:00
 action:
+  alias: Enable night routine
   service: automation.turn_on
   data:
     entity_id: automation.routine_night
