--- a/automations/home_modes/night.yaml
+++ b/automations/home_modes/night.yaml
@@ -5,7 +5,9 @@ trigger:
   entity_id: input_select.home_mode
   to: Night
 action:
-- service: pyscript.lock_down
-- service: pyscript.set_temperature
+- alias: lock down the house
+  service: pyscript.lock_down
+- alias: Set temperature mode to night
+  service: pyscript.set_temperature
   data:
     mode: night
