--- a/automations/ifttt/kodi.yaml
+++ b/automations/ifttt/kodi.yaml
@@ -6,6 +6,7 @@ trigger:
   webhook_id: !secret 'webhook_ghkodi'
 condition: !secret 'webhook_auth_check'
 action:
+  alias: Send the spoken command to Kodi using the GHKodi server
   service: rest_command.kodi_send
   data_template:
     token: '{{ trigger.json.token }}'
