--- a/automations/notify/hacs_update_available.yaml
+++ b/automations/notify/hacs_update_available.yaml
@@ -5,7 +5,8 @@ trigger:
   entity_id: sensor.hacs
 condition: '{{ states("sensor.hacs") | int > 0 }}'
 action:
-- service: persistent_notification.create
+- alias: Create/update persistent notification to show HACS updates
+  service: persistent_notification.create
   data:
     title: '{{ states("sensor.hacs") }} updates pending in HACS'
     message: "There are {{ states(\"sensor.hacs\") }} updates pending in [HACS](/hacs)\n\
