--- a/automations/notify/washer_on.yaml
+++ b/automations/notify/washer_on.yaml
@@ -5,10 +5,12 @@ trigger:
   entity_id: sensor.washer_electric_consumption_w
   above: 50
 condition:
+  alias: check if washer input_boolean is off
   condition: state
   entity_id: input_boolean.washer
   state: 'off'
 action:
+  alias: Turn on washer input_boolean
   service: input_boolean.turn_on
   data:
     entity_id: input_boolean.washer
