--- a/automations/pyscript/raman_off_zoom.yaml
+++ b/automations/pyscript/raman_off_zoom.yaml
@@ -7,7 +7,8 @@ trigger:
   to: 'off'
   for: 00:00:15
 action:
-- service: pyscript.set_slack_status
+- alias: Update Slack status to indicate Raman is off Zoom
+  service: pyscript.set_slack_status
   data:
     token: !secret 'token_slack'
     status_text:
