--- a/automations/pyscript/reload_pyscript_folder.yaml
+++ b/automations/pyscript/reload_pyscript_folder.yaml
@@ -5,4 +5,5 @@ trigger:
   event_type: folder_watcher
 condition: '{{ trigger.event.data.folder == "/config/pyscript" }}'
 action:
+  alias: Reload pyscript modules
   service: pyscript.reload
