--- a/automations/routines/disable_night_routine.yaml
+++ b/automations/routines/disable_night_routine.yaml
@@ -4,6 +4,7 @@ trigger:
   platform: time
   at: 06:00:00
 action:
+  alias: Disable night routine
   service: automation.turn_off
   data:
     entity_id: automation.routine_night
