--- a/automations/routines/morning.yaml
+++ b/automations/routines/morning.yaml
@@ -9,6 +9,7 @@ trigger:
   - light.kitchen
   to: 'on'
 condition:
+  alias: Check that the home mode is currently night and its after 6 AM
   and:
   - condition: time
     after: 06:00:01
@@ -17,6 +18,7 @@ condition:
     entity_id: input_select.home_mode
     state: Night
 action:
+  alias: Set Home Mode to Home
   service: input_select.select_option
   data:
     entity_id: input_select.home_mode
