--- a/automations/notify/washer_off.yaml
+++ b/automations/notify/washer_off.yaml
@@ -20,7 +20,7 @@ action:
   service: input_boolean.turn_off
   data:
     entity_id: input_boolean.washer
-- action: Clear washer is done notification from all persons
+- alias: Clear washer is done notification from all persons
   repeat:
     for_each: '{{ persons }}'
     sequence:
