--- a/automations/notify/ha_updates.yaml
+++ b/automations/notify/ha_updates.yaml
@@ -8,12 +8,8 @@ condition:
     condition: state
     entity_id: sensor.available_ha_version
     state: unavailable
-- '{% set curr_ver = states("sensor.local_ha_version").split(".") %}{% set new_ver
-  = states("sensor.available_ha_version").split(".") %}{{ (new_ver|count != curr_ver|count)
-  or new_ver[0]|int > curr_ver[0]|int or (new_ver|count > 1 and new_ver[0]|int ==
-  curr_ver[0]|int and new_ver[1]|int > curr_ver[1]|int) or (new_ver|count > 2 and
-  new_ver[0]|int == curr_ver[0]|int and new_ver[1]|int == curr_ver[1]|int and new_ver[2]|int
-  > curr_ver[2]|int) }}'
+- '{{ version(states("sensor.available_ha_version")) > version(states("sensor.local_ha_version"))
+  }}'
 action:
   alias: Notify Slack that a new HA version is available
   service: notify.apprise
