add unit of measurement

--- a/mqtt.yaml
+++ b/mqtt.yaml
@@ -25,8 +25,10 @@ sensor:
   value_template: '{{ value_json | int }}'
   device_class: moisture
   icon: mdi:flower-pollen
+  unit_of_measurement: '%'
 - name: Jasmine Plant Moisture
   state_topic: rtl_433/docker/devices/Fineoffset-WH51/0d093a/moisture
   value_template: '{{ value_json | int }}'
   device_class: moisture
   icon: mdi:leaf
+  unit_of_measurement: '%'
