exclude owntone from homekit

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,6 +14,7 @@ frontend: !include 'frontend.yaml'
 google_assistant: !include 'google_assistant.yaml'
 history:
 homeassistant: !include 'homeassistant.yaml'
+homekit: !include 'homekit.yaml'
 http: !include 'http.yaml'
 influxdb: !include 'influxdb.yaml'
 input_boolean:
