--- a/homekit.yaml
+++ b/homekit.yaml
@@ -1,13 +1,13 @@
-filter:
-  include_domains:
-  - climate
-  - light
-  - lock
-  include_entity_globs:
-  - sensor.*_air_temperature
-  - sensor.*_door
-  - sensor.*_humidity
-  - sensor.*_illuminance
-  - sensor.*_motion
-  exclude_domains:
-  - media_player
+- filter:
+    include_domains:
+    - climate
+    - light
+    - lock
+    include_entity_globs:
+    - sensor.*_air_temperature
+    - sensor.*_door
+    - sensor.*_humidity
+    - sensor.*_illuminance
+    - sensor.*_motion
+    exclude_domains:
+    - media_player
