--- a/configuration.yaml
+++ b/configuration.yaml
@@ -50,6 +50,7 @@ system_log:
 timer:
 tts: !include 'tts.yaml'
 wake_on_lan:
+waste_collection_schedule: !include 'waste_collection_schedule.yaml'
 winix: !include 'winix.yaml'
 zeroconf:
 zone: !include 'zones.yaml'
